# async-log-watch

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  test-log.txt
examples/: monitor_logs.rs
lipsum_gen/: Cargo.toml
lipsum_gen/src/: main.rs
src/: lib.rs  log_watcher.rs  main.rs
tests/: test_watcher.rs  test_watcher_multilines.rs  test_watcher_multilines_regex.rs
