[package]
name = "async-log-watch"
version = "0.2.0"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
edition = "2021"
description = "A simple Rust library to monitor log files and trigger an async callback when a new line is added."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/async-log-watch"
repository = "https://github.com/geminik23/async-log-watch"


[dependencies]
async-std = {version="1.12", optional=true}
notify = "5.1"
shellexpand = "3.1"
thiserror = "1.0"
regex = "1.8"


[features]
default = ["async_std_default"]
tokio1 = ["async_std_tokio1"]
tokio02 = ["async_std_tokio2"]
tokio03 = ["async_std_tokio3"]

async_std_default = ["async-std/attributes"]
async_std_tokio1 = ["async-std/attributes", "async-std/tokio1"]
async_std_tokio2 = ["async-std/attributes", "async-std/tokio02"]
async_std_tokio3 = ["async-std/attributes", "async-std/tokio03"]

[package.metadata.features]
mutually_exclusive = ["default", "tokio1", "tokio01", "tokio03"]

[lib]
name = "async_log_watch"
path = "src/lib.rs"

